# overwatch-tracker

./: .gitignore  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/entity/: Cargo.toml
backend/entity/src/: game.rs  image.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240311_194457_user.rs  m20240311_200231_game.rs  m20240312_103712_image.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/server/src/api/: game.rs  mod.rs  user.rs
backend/server/src/configuration/: app.rs  axum.rs  env.rs  error.rs  mod.rs  session.rs  utils.rs
backend/server/src/ext/: axum_ext.rs  mod.rs  serde_ext.rs
backend/service/: Cargo.toml
backend/service/src/: game.rs  image.rs  lib.rs  models.rs  user.rs
frontend/: .prettierrc.json  Dockerfile  package.json
frontend/src/app/: _provider.tsx  layout.tsx  page.tsx
frontend/src/app/games/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: header.tsx
frontend/src/components/games/: add-game-button.tsx  add-game.tsx  game.tsx  games-filter.tsx  games-list.tsx
frontend/src/store/: store.ts
frontend/src/types/: games.ts
frontend/src/utils/: game.ts  hooks.ts  requests.ts
