[workspace]
resolver = "2"

members = [
    "server",
    "migration",
    "entity",
    "service",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
