[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tokio", "http1", "json", "matched-path", "query"], default-features = false }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tower-sessions = "0.11"

sea-orm = { workspace = true }
garde = { version = "0.18.0", features = ["derive"] }
async-trait = "0.1"

serde = { workspace = true }
serde_json = "1.0"
uuid = "1.7"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5.3"

http-error-derive = "0.3"
once_cell = "1.19"

tracing = "0.1"
tracing-subscriber = "0.3"

migration = { path = "../migration" }
entity = { path = "../entity" }
service = { path = "../service" }
